# errorlock-vuln-detection

./: .env.example  .gitignore  API_MODELS.md  CS541_ErrorLock_Final.ipynb  FINAL_REPORT.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  RESULTS_SUMMARY.md  pyproject.toml  requirements-hf.txt  requirements.txt
.github/workflows/: test.yml
data/: CASTLE-C250.min.json
data/sample/: sample_castle.json
errorlock/: __init__.py  analysis.py  cli.py  data.py  memory.py  metrics.py  parser.py  prompts.py  providers.py  runner.py  schema.sql  types.py
errorlock_dbs/: qwen25_coder_7b__B_castle_train_mistakes.db  qwen25_coder_7b__C_castle_all_mistakes.db
errorlock_results/: baseline_vs_errorlock_changes.csv  juliet_overlap_250.csv  qwen25_coder_7b__A_castle_all_baseline.csv  qwen25_coder_7b__B_castle_heldout_errorlock.csv  qwen25_coder_7b__C_castle_all_errorlock.csv  qwen25_coder_7b__E_juliet_baseline.csv  qwen25_coder_7b__F_juliet_castle_errorlock.csv  report_table.csv  summary_metrics_final.csv
latex_report/: 0abstract.tex  1intro.tex  2related.tex  3overview.tex  4eval.tex  5conclusion.tex  main.tex  ref.bib
results/: aggregate_analysis.csv  aggregate_analysis.md
results/api_gemini_2_5_flash_lite_limit8/: predictions.csv  report.md  summary.json
results/api_gemini_2_5_flash_lite_limit8_smart_safe_gated/: predictions.csv  report.md  summary.json
results/api_openrouter_gpt_oss_120b_free_limit20/: predictions.csv  report.md  (+1 more)
scripts/: run_api_experiments.sh  run_real_experiments.sh
tests/: test_memory.py  test_metrics.py  test_parser.py  test_runner.py
(+99 files in other folders)
