[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "errorlock"
version = "0.1.0"
description = "Database-backed mistake memory for LLM vulnerability detection on CASTLE."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
hf = [
  "torch",
  "transformers>=4.40",
  "accelerate",
  "bitsandbytes; platform_system != 'Darwin'",
  "sentencepiece",
]
test = [
  "pytest>=7.0",
]

[project.scripts]
errorlock = "errorlock.cli:main"

[tool.setuptools.packages.find]
include = ["errorlock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
